[package]
name = "aoc_util"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.8.21"
typed-builder = "0.9.1"

[[bin]]
name = "conversion2vec"
path = "src/bin/conversion_to_vec.rs"

[[bin]]
name = "conversion2streamer"
path = "src/bin/conversion_to_streamer.rs"

[[bin]]
name = "unique"
path = "src/bin/unique.rs"

[[bin]]
name = "nostream"
path = "src/bin/remove_stream_info.rs"